--- a/admin.html
+++ b/admin.html
@@ -117,6 +117,12 @@
                 cursor: pointer;
                 grid-row-end: span 11;
             }
+
+        .border {
+            border: 5px solid rgb(255, 0, 0);
+            border-style: inset;
+            border-radius: 5%;
+        }
         @media screen and (max-width: 550px) {
             .form {
                 max-width: 90vw;
@@ -145,7 +151,7 @@
         </form>
         <progress id="progress" max="100"></progress>
         <h4 class="response"></h4>
-        <a href="http://localhost:8080/logout" class="logout">Wyloguj</a>
+        <!-- <a href="http://localhost:8080/logout" class="logout">Wyloguj</a> -->
         <div class="images"></div>
        
     </center>
@@ -158,7 +164,9 @@
         const desc = document.querySelector("#description")
         const response = document.querySelector(".response")
         const progress = document.getElementById("progress")
-        const logout = document.querySelector(".logout");
+        // const logout = document.querySelector(".logout");
+        const cards = document.getElementsByClassName("card")
+        const images = document.getElementsByTagName("img")
         const formData = new FormData();
         let progressValue = 0;
         let totalSize = 0;
@@ -182,13 +190,11 @@
             formData.delete('image');
             let files = [...e.target.files];
             for (let item of files) {
-            formData.append('image', item)
+                formData.append('image', item)
             }
-            const cards = document.getElementsByClassName("card")
                 Array.from(cards).forEach(card => {
                     card.remove()
                 })
-            const images = document.getElementsByTagName("img")
                 Array.from(images).forEach(image => {
                     image.remove();
                 })
@@ -201,10 +207,16 @@
                     imga.setAttribute("src", url);
                     imga.classList.add("preview")
                     document.querySelector(".images").appendChild(imgContainer)
-                    imgContainer.setAttribute("draggable", true)
                     imgContainer.setAttribute("id", i)
                     imgContainer.classList.add("card")
-                    imgContainer.appendChild(imga)   
+                    imgContainer.appendChild(imga)
+                    imgContainer.addEventListener("click", (e)=> {
+                        document.querySelectorAll(".card").forEach((item)=> item.classList.remove("border"))
+                        e.currentTarget.classList.add("border")
+                        console.log(file.name);
+                        formData.delete("thumbnail");
+                        formData.append("thumbnail", file.name);
+                    })   
                 })
             }  
         }
@@ -232,10 +244,11 @@
             }
         })
 
-        logout.addEventListener("click", (e) => {
-            e.preventDefault();
-            axios.get("/logout",{withCredentials: true}).then((res) =>  window.location=`/`).catch(err => console.log(err));
-        })
+
+        // logout.addEventListener("click", (e) => {
+        //     e.preventDefault();
+        //     axios.get("/logout",{withCredentials: true}).then((res) =>  window.location=`/`).catch(err => console.log(err));
+        // })
 
         button.addEventListener("click", (e) => {
             e.preventDefault();
