--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
             box-sizing: border-box;
         }
         html, body, main {
-            min-height:100%;height:100%;
+            min-height:100vh;height:100vh;
         }
         body {
             overflow-x: hidden;
@@ -79,6 +79,16 @@
             color: white;
             padding: 5px;
         }
+        @keyframes warning {
+            0% {font-size: 1rem;}
+            40% {font-size: 1.2rem;}
+            100% {font-size: 1rem;}
+        }
+        .alertzz {
+            font-size: 1rem;
+            animation: warning .3s ease-in-out;
+        }
+
         .response {
             color: #ad3100;
             margin: 10px 0;
@@ -323,6 +333,7 @@
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
+    const main = document.querySelector("main")
     const button = document.querySelector(".button")
     const imagefile = document.querySelector('#files');
     const title = document.querySelector("#title");
@@ -360,12 +371,14 @@
     }
     gifShow.addEventListener("click", () => {
         if (!gifMenu.classList.contains("gif_menu_show")) {
+            main.style = "overflow:hidden"
             gifMenu.classList.add("gif_menu_show")
             gifBcg.classList.remove("background_hidden")
         }
     })
     gifHide.addEventListener("click", () => {
         if(gifMenu.classList.contains("gif_menu_show")) {
+            main.style = "overflow:auto"
             gifMenu.classList.remove("gif_menu_show")
             gifBcg.classList.add("background_hidden")
         }
