--- a/users-data.html
+++ b/users-data.html
@@ -71,6 +71,12 @@
         line-height: 1.2rem;
         font-size: 0.8rem;
       }
+      .user_count {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        font-size: 0.8rem;
+        line-height: 2rem;
+      }
       .loader,
       .loader:before,
       .loader:after {
@@ -133,7 +139,10 @@
   <body>
     <main>
       <center>
-        <h1>Odwiedzający stronę.</h1>
+        <h1>Odwiedzający stronę</h1>
+        <p class="user_count">
+          Liczba wyświetleń strony: <span class="data_count"></span>
+        </p>
       </center>
       <div class="container">
         <div class="loader">Loading...</div>
@@ -163,20 +172,59 @@
       const container = document.querySelector(".container");
       const badge = document.getElementsByTagName("template")[0];
       const loader = document.querySelector(".loader");
+      const userCount = document.querySelector(".data_count");
+      const displayTwoDigits = (date, number) => {
+        let fixedNumber = "";
+
+        switch (number) {
+          case "m":
+            return (fixedNumber =
+              date.getMonth().toString().length === 1
+                ? "0" + (date.getMonth() + 1)
+                : date.getMonth() + 1);
+            break;
+          case "d":
+            return (fixedNumber =
+              date.getDate().toString().length === 1
+                ? "0" + date.getDate()
+                : date.getDate());
+            break;
+          case "h":
+            return (fixedNumber =
+              date.getHours().toString().length === 1
+                ? "0" + date.getHours()
+                : date.getHours());
+            break;
+          case "min":
+            return (fixedNumber =
+              date.getMinutes().toString().length === 1
+                ? "0" + date.getMinutes()
+                : date.getMinutes());
+            break;
+          case "y":
+            return (fixedNumber = date.getFullYear());
+            break;
+          default:
+            return "";
+            break;
+        }
+      };
+
       const getUsersData = async () => {
-        axios.get("https://webdev-online.pl/users-info").then((res) => {
+        axios.get("http://localhost:8080/users-info").then((res) => {
           const info = res.data;
           loader.remove();
           info.forEach((element, i) => {
             const time = element.timestamp;
             const date = new Date(time);
             const dateForDisplay =
-              date.getDate() +
+              displayTwoDigits(date, "d") +
               "/" +
-              (date.getMonth() + 1) +
+              displayTwoDigits(date, "m") +
               "/" +
-              date.getFullYear();
-            const hourToDisplay = date.getHours() + ":" + date.getMinutes();
+              displayTwoDigits(date, "y");
+            const hourToDisplay =
+              displayTwoDigits(date, "h") + ":" + displayTwoDigits(date, "min");
             const template = `  <div class="user_badge">
         <div class="flag_section">
           <div class="flag_image">
@@ -189,20 +237,20 @@
         </div>
         <div class="data_section">
           <p class="country"><b>Kraj:</b> ${
-            element.countryName !== null ? element.countryName : "Kraj nieznany"
+            element.countryName !== null ? element.countryName : "nieznany"
           }</p>
           <p class="city"><b>Miasto:</b> ${
-            element.city !== null ? element.city : "Miasto nieznane"
+            element.city !== null ? element.city : "nieznane"
           }</p>
           <p class="date"><b>Data:</b> ${
-            dateForDisplay != "1/1/1970" ? dateForDisplay : "Data nieznana"
+            dateForDisplay != "01/01/1970" ? dateForDisplay : "nieznana"
           }</p>
           <p class="hour"><b>
             Godzina:</b> ${
-              hourToDisplay != "1:0" ? hourToDisplay : "Godzina nieznana"
+              hourToDisplay != "01:00" ? hourToDisplay : "nieznana"
             }</p>
           <p class="isp"><b>Dostawca internetu:</b> ${
-            element.isp != null ? element.isp : "Dostawca internetu nieznany"
+            element.isp != null ? element.isp : "nieznany"
           }</p>
           <p class="ip"><b>IP:</b> ${element.userIp}</p>
         </div>
@@ -216,6 +264,14 @@
         });
       };
       getUsersData();
+      const setUserCount = () => {
+        let count = 0;
+        axios.get("http://localhost:8080/users-count").then((res) => {
+          count = res.data;
+          userCount.innerText = count;
+        });
+      };
+      setUserCount();
     </script>
   </body>
 </html>
