--- a/routes/login.html
+++ b/routes/login.html
@@ -36,6 +36,6 @@
       </form>
     </center>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/public/js/login.production.min.js"></script>
+    <script src="/public/js/login.dev.js"></script>
   </body>
 </html>
