--- a/routes/edit.html
+++ b/routes/edit.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="theme-color" content="#d27303" />
-    <title>Nowe ogłoszenie - admin.noanzo.pl</title>
+    <title>Edycja ogłoszeń - admin.noanzo.pl</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
